# laneflow

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.agents/: README.md
.githooks/: commit-msg
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter.yml  bug.yml  core.yml  data-spec.yml  design.yml  docs.yml  feature.yml  research.yml
.github/workflows/: ci.yml  external-review-gate.yml  external-review-signal.yml  schema-publication-monitor.yml  schema-publication.yml
crates/laneflow-bevy/: Cargo.toml  README.md
crates/laneflow-bevy/benches/: presentation.rs
crates/laneflow-bevy/examples/: debug_gizmos_smoke.rs  native_reference.rs  signalized_corridor.rs
crates/laneflow-bevy/src/: debug.rs  error.rs  lib.rs  lifecycle.rs  plugin.rs  presentation.rs  presentation_selective_read_research_tests.rs  session.rs
crates/laneflow-bevy/tests/: campus_e2e.rs  debug_gizmos.rs  fixed_schedule.rs  lifecycle.rs  lifecycle_allocations.rs  presentation.rs  presentation_allocations.rs  presentation_performance.rs
crates/laneflow-bevy/tests/support/: presentation_scale.rs
crates/laneflow-core/: Cargo.toml  README.md
crates/laneflow-core/benches/: core_commands.rs  core_step.rs  edge_cap_research.rs  minimum_edge_candidates.rs  numeric_candidates.rs  numeric_production_migration.rs  route_distance_candidates.rs
crates/laneflow-core/proptest-regressions/: README.md  longitudinal.txt  vehicle_following_properties.txt
crates/laneflow-core/src/: command_spatial.rs  error.rs  event.rs  graph.rs  handle.rs  id.rs  lib.rs  longitudinal.rs  numeric_policy.rs  occupancy.rs  parking.rs  profile.rs  route.rs  route_distance.rs  signal.rs  time.rs  traffic.rs  vehicle.rs  world.rs  world_event_merge_research_tests.rs  world_occupancy_tests.rs  world_partitioned_occupancy_research_tests.rs  world_reduced_rate_research_tests.rs  world_retained_memory_tests.rs  world_selective_read_research_tests.rs
crates/laneflow-core/tests/: crate_smoke.rs  data_format_schema.rs  determinism.rs  example_route_data.rs  fixed_tick.rs  handles.rs  initial_traffic_data.rs  lane_graph.rs  lifecycle_allocations.rs  minimum_edge_research.rs  numeric_contract_calibration.rs  numeric_precision_research.rs  parking_activation.rs  parking_runtime.rs  parking_runtime_allocations.rs  parking_runtime_scale.rs  parking_static.rs  parking_static_scale.rs  parking_validation.rs  route_distance_candidates.rs  route_following.rs  signals_compliance.rs  signals_determinism.rs  signals_runtime.rs  signals_scale.rs  signals_static.rs  speed_limit_allocations.rs  speed_limits.rs  vehicle_following.rs  vehicle_following_allocations.rs  vehicle_following_properties.rs  vehicle_following_scale.rs  vehicle_profiles.rs  vehicle_replace.rs  vehicle_replace_allocations.rs
crates/laneflow-core/tests/common/: mod.rs
crates/laneflow-core/tests/support/: command_validation_scenarios.rs  minimum_edge_research.rs  numeric_contract_calibration.rs  numeric_precision_research.rs  parking_runtime_scenarios.rs  route_distance_candidates.rs  signals_validation_scenarios.rs  vehicle_following_scenarios.rs
crates/laneflow-data/: Cargo.toml  README.md
crates/laneflow-data/examples/: parking_lifecycle.rs
crates/laneflow-data/src/: error.rs  lib.rs  scenario.rs  scenario_error.rs  scenario_wire.rs  wire.rs
crates/laneflow-data/tests/: example_route_data.rs  loader.rs  parking_end_to_end.rs  scenario_loader.rs  scenario_schema_contract.rs  schema_contract.rs  signals_end_to_end.rs
crates/laneflow-scenario/: Cargo.toml  README.md
crates/laneflow-scenario/src/: lib.rs
crates/laneflow-scenario/src/signalized_corridor/: catalog.rs  error.rs  mod.rs  population.rs  prng.rs
crates/laneflow-scenario/tests/: signalized_corridor_allocations.rs  signalized_corridor_population.rs
crates/laneflow-spatial/: Cargo.toml  README.md
crates/laneflow-spatial/benches/: pose_batch.rs
crates/laneflow-spatial/src/: batch.rs  error.rs  geometry.rs  lib.rs  primitives.rs  registry.rs
crates/laneflow-spatial/tests/: pose_batch.rs  pose_batch_allocations.rs  pose_batch_performance.rs  public_api.rs  spatial_properties.rs
crates/laneflow-spatial/tests/support/: pose_batch_scale.rs
docs/: README.md  architecture.md  roadmap.md
docs/adr/: 0001-project-scope.md  0002-dependency-and-licensing-constraints.md  0003-runtime-tick-and-determinism.md  0004-core-implementation-language.md  0005-core-identity-and-handle-model.md  0006-vehicle-following-control-and-safety.md  0007-traffic-data-crate-and-loader-boundary.md  0008-pre-1.0-data-format-version-policy.md  0009-signal-indication-gate-and-policy-separation.md  0010-parking-binding-and-vehicle-lifecycle-authority.md  0011-schema-identifier-and-publication-contract.md  0012-core-numeric-authority-and-presentation-precision.md  0013-engine-neutral-spatial-geometry-and-length-authority.md  0014-residual-aware-f32-core-authority-and-migration-gates.md  0015-bounded-f32-canonical-spatial-frames.md  0016-scenario-population-and-recycle-lifecycle-authority.md  0017-static-road-junction-maneuver-and-gate-identity.md  README.md
docs/design/: README.md  adapter-api.md  bevy-reference-adapter.md  core-id-handles.md  core-runtime-performance-baseline.md  core-runtime-scalability-audit.md  core-runtime.md  (+13 more)
research/issue-123-spatial-prototype/: Cargo.toml  README.md
research/issue-123-spatial-prototype/src/: lib.rs
research/issue-123-spatial-prototype/tests/: candidate_parity.rs
schemas/: README.md  laneflow-data-v0.2.schema.json  laneflow-data-v0.3.schema.json  laneflow-data-v0.4.schema.json  laneflow-data-v0.5.schema.json  laneflow-data-v0.6.schema.json  laneflow-data-v0.7.schema.json  laneflow-scenario-manifest-v0.1.schema.json  laneflow-spatial-v0.1.schema.json  publication.json
tools/laneflow-corridor-generator/: Cargo.toml  README.md
tools/laneflow-corridor-generator/src/: config.rs  error.rs  generator.rs  lib.rs  main.rs  model.rs
tools/laneflow-corridor-generator/tests/: corridor.rs
xtask/: Cargo.toml
(+76 files in other folders)
