[workspace]
members = [
    "crates/laneflow-core",
    "crates/laneflow-data",
    "crates/laneflow-spatial",
    "research/issue-123-spatial-prototype",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.96"
repository = "https://github.com/illusion-tech/laneflow"
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
