[package]
name = "laneflow-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "引擎无关的 LaneFlow Core runtime crate。"
publish = false

[lib]
name = "laneflow_core"
path = "src/lib.rs"

[dependencies]
indexmap = "2.14"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.8"
jsonschema = { version = "0.47", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "core_step"
harness = false

[lints]
workspace = true
