[package]
name = "laneflow-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "引擎无关的 LaneFlow Core runtime crate。"
publish = false

[lib]
name = "laneflow_core"
path = "src/lib.rs"

[dependencies]
indexmap = "2.14"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.8"
half = "2.7.1"
proptest = { version = "1.11", default-features = false, features = ["std"] }
stats_alloc = "=0.1.10"

[[bench]]
name = "core_step"
harness = false

[[bench]]
name = "core_commands"
harness = false

[[bench]]
name = "numeric_candidates"
harness = false

[lints]
workspace = true
