[package]
name = "laneflow-data"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "LaneFlow 当前外部数据格式与 Core normalization crate。"
publish = false

[lib]
name = "laneflow_data"
path = "src/lib.rs"

[dependencies]
laneflow-core = { version = "0.0.0", path = "../laneflow-core" }
laneflow-spatial = { version = "0.0.0", path = "../laneflow-spatial" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
sha2 = { version = "0.11", default-features = false }
thiserror = "2.0"

[dev-dependencies]
jsonschema = { version = "0.47", default-features = false }

[lints]
workspace = true
