[package]
name = "laneflow-scenario"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "LaneFlow 的可选、引擎无关 reference scenario runtime support。"
publish = false

[lib]
name = "laneflow_scenario"
path = "src/lib.rs"

[dependencies]
laneflow-core = { version = "0.0.0", path = "../laneflow-core" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "1.1.3"

[dev-dependencies]
laneflow-data = { version = "0.0.0", path = "../laneflow-data" }
stats_alloc = "=0.1.10"

[lints]
workspace = true
