[package]
name = "laneflow-spatial"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "LaneFlow 引擎无关的标准空间类型与几何注册表 crate。"
publish = false

[lib]
name = "laneflow_spatial"
path = "src/lib.rs"

[dependencies]
laneflow-core = { version = "0.0.0", path = "../laneflow-core" }

[dev-dependencies]
criterion = "0.8"
proptest = { version = "1.11", default-features = false, features = ["std"] }
stats_alloc = "=0.1.10"

[[bench]]
name = "pose_batch"
harness = false

[lints]
workspace = true
