[package]
name = "laneflow-corridor-generator"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
jsonschema = { version = "0.48", default-features = false }
laneflow-core = { version = "0.0.0", path = "../../crates/laneflow-core" }
laneflow-data = { version = "0.0.0", path = "../../crates/laneflow-data" }
laneflow-spatial = { version = "0.0.0", path = "../../crates/laneflow-spatial" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.11", default-features = false }
thiserror = "2.0"
toml = "1.1.3"

[lints]
workspace = true
